--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,11 @@
         "function": "app"
       },
       {
-        "source": "!/api/**",
+        "source": "/admin/**",
+        "destination": "admin/index.html"
+      },
+      {
+        "source": "**",
         "destination": "/index.html"
       }
     ]
