--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
       },
       {
         "source": "/admin/**",
-        "destination": "admin/index.html"
+        "destination": "/admin/index.html"
       },
       {
         "source": "**",
